--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
+    <title>🐍 SnakeMania 🐍</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🐍 Snake Game 🐍</h1>
+    <h1>🐍 SnakeMania 🐍</h1>
     <div class="btn-container">
-        <button class="btn" id="start-btn">Start Game</button>
-        <button class="btn" id="end-btn">End Game</button>
+        <button class="btn" id="start-btn">New Game</button>
+        <button class="btn" id="end-btn">Quit Game</button>
     </div>
     <div id="countdown" class="countdown"></div>
-    <canvas id="game-canvas" width="400" height="400"></canvas>
+    <canvas id="game-canvas" width="500" height="500"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
