--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🐍 SnakeMania 🐍</h1>
+    <div id="header-container">
+        <h1>🐍 SnakeMania 🐍</h1>
+    </div>
     <div class="btn-container">
         <button class="btn" id="start-btn">New Game</button>
         <button class="btn" id="end-btn">Quit Game</button>
     </div>
     <div id="countdown" class="countdown"></div>
-    <canvas id="game-canvas" width="500" height="500"></canvas>
+    <div id="game-container" class="game-container">
+        <canvas id="game-canvas" width="400" height="400"></canvas>
+        <div id="game-over" class="game-over">Game Over!</div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
