Ändere den Titel im Header von "SnakeMania" zu "Snake"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header-container">
-        <h1>🐍 SnakeMania 🐍</h1>
+        <h1>🐍 Snake 🐍</h1>
     </div>
     <div class="btn-container">
         <button class="btn" id="start-btn">New Game</button>
